[project]
name = "qiskit-mps-initializer"
version = "0.1.0"
description = "Wavefunction initializers for Qiskit based of matrix product states (MPS)"
readme = "README.md"
authors = [
    { name = "Siavash Davani", email = "siavash.davani@uni-jena.de" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.5",
    "qiskit>=2.0.1",
    "quimb>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.131.20",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "scipy-stubs>=1.15.3.0",
]
quimb = [
    "kahypar>=1.3.5",
    "networkx>=3.4.2",
    "numba>=0.61.2",
    "optuna>=4.3.0",
]
